Fix overlay on safari

--- a/styles/project_style.css
+++ b/styles/project_style.css
@@ -228,7 +228,7 @@ body {
   width: 100%;
   opacity: 0;
   transition: .5s ease;
-  background-color: rgb(0,0,0, 0.85);
+  background-color: rgba(0,0,0, 0.85);
 	border-radius: 25%;
 	border: 2px solid #ddd;
 }
